# widecity_image_downloader

./: README.md  setup.cfg
src/widecity_image_downloader/: Image.py
src/widecity_image_downloader.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
